@@ -146,7 +146,7 @@ variable).</p>
 additional libraries zlib, and szlib depending on whether HDF5 was build
 against them.</p></li>
 <li><p>If you plan on using the Python interface you need either Python 2
-(version 2.7 or higher) or Python 3 (version 3.4 or higher).
+(version 2.7) or Python 3 (version 3.6 or higher).
 You will also need the Python packages <code class="docutils literal notranslate"><span class="pre">numpy</span></code> (version 1.4 or higher)
 and <code class="docutils literal notranslate"><span class="pre">cffi</span></code> (version 1.5.2 or higher).</p></li>
 <li><p>If you plan on using the R interface you need R version 3 or higher.</p></li>
